--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@solana/wallet-adapter-react": "^0.15.36",
     "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.34",
-    "@solana/web3.js": "^1.43.0",
+    "@solana/web3.js": "^1.98.0",
+    "bs58": "^6.0.0",
     "firebase": "^11.6.0",
+    "grep": "^0.1.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
