--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "bs58": "^6.0.0",
     "firebase": "^11.6.0",
     "grep": "^0.1.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "rollup-plugin-node-polyfills": "^0.2.1"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
